--- a/quiz.html
+++ b/quiz.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>La-Tomatina Quizpage</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -41,4 +42,5 @@
     </footer>
   <script src="script.js"></script>
     </body>
+
 </htmnl>
