Fix alt text for hero image in index.html
Updated the hero picture alt text for better accessibility.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </ul>
       </div>
       <div class="heroPic">
-        <img src="Resource/HeroPicture.png" alt="">
+        <img src="Resource/HeroPicture.png" alt="Three ladies dodging or shielding from splash tomato juice">
       </div>
     </div>
   </div>
@@ -49,4 +49,5 @@
 </body>
 
 </html>
+
 
